fix alignment of cross and reverse bg color with font

--- a/src/components/note.css
+++ b/src/components/note.css
@@ -29,7 +29,7 @@
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background-color: black;
+  background-color: rgba(247, 249, 255, 0.8);
   cursor: pointer;
 }
 
@@ -39,8 +39,10 @@
   right: 0;
   width: 100%;
   height: 100%;
-  font-size: 20px;
-  color: white;
+  font-size: 24px;
+  font-weight: 900;
+  color: black;
   content: "\00D7";
+  line-height: 25px;
   text-align: center;
 }
